--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -12,6 +12,10 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   padding: 0;
 }
 
+body {
+  background-color: #fafafa;
+}
+
 ol, ul, li {
   list-style: none;
 }
